# bloodtrail

./: CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
bloodtrail/: EXPANSION_CHECKLIST.md  WIZARD_IMPLEMENTATION_CHECKLIST.md  __init__.py  __main__.py  bh_query.py  command_suggester.py  config.py  credential_input.py  creds_pipeline.py  data_source.py  display_commands.py  extractors.py  ip_resolver.py  logger.py  main.py  payload_generator.py  policy_parser.py  property_importer.py  pwned_tracker.py  query_runner.py  report_generator.py  settings.py  sid_resolver.py
bloodtrail/auto/: __init__.py  orchestrator.py  output_parsers.py
bloodtrail/autospray/: __init__.py  credential_sources.py  executor.py  lockout_manager.py  result_parser.py  script_generator.py  target_sources.py
bloodtrail/cli/: __init__.py  app.py  base.py  interactive.py  pager.py  parser.py
bloodtrail/core/: __init__.py  detection.py  file_discovery.py  formatters.py  models.py  neo4j_connection.py  password_reuse.py  query_loader.py  service_accounts.py
bloodtrail/cypher_queries/: README.md  adcs.json  attack_chains.json  azure_attacks.json  delegation.json  lateral_movement.json  operational.json  owned_principal.json  privilege_escalation.json  pwned_tracking.json  quick_wins.json  schema.json
bloodtrail/data/: query_mappings.json
bloodtrail/demo/: Dockerfile  __init__.py  analyzer.py  app.py  justfile
bloodtrail/display/: __init__.py  attack_paths.py  authenticated.py  base.py  manual_enum.py  post_exploit.py  post_success.py  pwned_display.py  spray.py  spray_tailored.py  statistics.py  tables.py  techniques.py
bloodtrail/enumerators/: __init__.py  aggregator.py  base.py  domain_detect.py  enum4linux.py  getnpusers.py  guest_probe.py  kerbrute.py  ldapsearch.py  lookupsid.py  rpcclient.py  smb_crawler.py
bloodtrail/mappings/: base.py  (+11 more)
demo/: Dockerfile  app.py  justfile  parser.py
(+59 files in other folders)
